[gd_scene load_steps=8 format=3 uid="uid://dn2le3mwahtax"]

[ext_resource type="Script" uid="uid://blqx70sywhngi" path="res://Scripts/dirt_spawner.gd" id="1_hivxq"]
[ext_resource type="Texture2D" uid="uid://btxyxybofpojj" path="res://Sprites/WashGame/Plate.png" id="2_l2ru7"]
[ext_resource type="PackedScene" uid="uid://dr7seaticcntf" path="res://Prefabs/Dirt.tscn" id="2_sjp6k"]
[ext_resource type="Script" uid="uid://cbb0f3rgtib20" path="res://Scripts/sponge.gd" id="3_i71ie"]
[ext_resource type="Texture2D" uid="uid://sx5me1row1p2" path="res://Sprites/WashGame/BackgroundWashGame.png" id="4_1q3xq"]
[ext_resource type="Texture2D" uid="uid://b3yvrtrvg4o2m" path="res://Sprites/WashGame/Sponge.png" id="6_n14uh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twggc"]
size = Vector2(81.5586, 117.473)

[node name="DishWash" type="Node2D"]

[node name="BackgroundWashGame" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(4.5, 5.0625)
texture = ExtResource("4_1q3xq")

[node name="Plate" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 349.0
offset_top = 65.0
offset_right = 812.0
offset_bottom = 528.0

[node name="Plate" type="Sprite2D" parent="Plate"]
position = Vector2(227, 259)
scale = Vector2(4.5, 5.0625)
texture = ExtResource("2_l2ru7")

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 481.0
offset_top = 546.0
offset_right = 681.0
offset_bottom = 616.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer"]
layout_mode = 2
max_value = 2.0
show_percentage = false

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="CorrectLabel" type="Label" parent="CenterContainer/Control"]
visible = false
layout_mode = 0
offset_left = -8.5
offset_top = 0.5
offset_right = 49.5
offset_bottom = 23.5
theme_override_colors/font_color = Color(0, 0.580392, 0, 1)
text = "Clean"
horizontal_alignment = 1

[node name="WrongLabel" type="Label" parent="CenterContainer/Control"]
visible = false
layout_mode = 0
offset_left = -8.5
offset_top = 0.5
offset_right = 49.5
offset_bottom = 23.5
theme_override_colors/font_color = Color(0.698039, 0, 0, 1)
text = "Timeout"
horizontal_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 388.0
offset_top = 180.0
offset_right = 745.0
offset_bottom = 528.0
border_color = Color(1, 0, 0, 0)

[node name="DirtSpawner" type="Node" parent="."]
script = ExtResource("1_hivxq")
dirt_prefab = ExtResource("2_sjp6k")
DIRT_NUMBER = 300

[node name="ThinkTimer" type="Timer" parent="DirtSpawner"]
wait_time = 4.0
autostart = true

[node name="CorrectTimer" type="Timer" parent="DirtSpawner"]
wait_time = 0.2

[node name="WrongTimer" type="Timer" parent="DirtSpawner"]
wait_time = 0.2

[node name="Sponge" type="CharacterBody2D" parent="." groups=["Sponge"]]
position = Vector2(0, -1)
script = ExtResource("3_i71ie")

[node name="Sponge2" type="Sprite2D" parent="Sponge"]
position = Vector2(366.708, 196.641)
scale = Vector2(2.65168, 2.8503)
texture = ExtResource("6_n14uh")

[node name="ColorRect" type="ColorRect" parent="Sponge"]
visible = false
offset_top = 1.0
offset_right = 366.0
offset_bottom = 181.0
color = Color(0.992157, 0.992157, 0.227451, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sponge"]
position = Vector2(366, 205)
rotation = -0.528221
shape = SubResource("RectangleShape2D_twggc")

[node name="Label" type="Label" parent="."]
offset_left = 45.0
offset_top = 21.0
offset_right = 190.0
offset_bottom = 65.0
text = "0"

[node name="Label2" type="Label" parent="."]
offset_left = 965.0
offset_top = 21.0
offset_right = 1110.0
offset_bottom = 65.0
text = "Hover over dirt
with the sponge"

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]

[connection signal="timeout" from="DirtSpawner/ThinkTimer" to="DirtSpawner" method="_on_timer_timeout"]
[connection signal="timeout" from="DirtSpawner/CorrectTimer" to="DirtSpawner" method="_on_correct_timer_timeout"]
[connection signal="timeout" from="DirtSpawner/WrongTimer" to="DirtSpawner" method="_on_wrong_timer_timeout"]
